# nativeble

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENCE.md  README.md
cmake/: configure_outputs.cmake
src-ble/: NativeBleController.cpp  NativeBleController.h  NativeBleControllerTypes.h
src-ble-test/: main.cpp
src-ble/linux/: NativeBleInternal.cpp  NativeBleInternal.h  bluezdbus  simpledbus
src-ble/linux/bluezdbus/: BluezAdapter.cpp  BluezAgent.cpp  BluezDevice.cpp  BluezGattCharacteristic.cpp  BluezGattService.cpp  BluezGattService.h  BluezService.cpp  BluezService.h
src-ble/linux/bluezdbus/interfaces/: Adapter1.cpp  Adapter1.h  Device1.cpp  Device1.h  GattCharacteristic1.cpp  GattCharacteristic1.h  GattService1.cpp
src-ble/linux/simpledbus/: SimpleDBus.h
src-ble/linux/simpledbus/base/: Connection.cpp  Connection.h  Holder.cpp  Holder.h  Logger.cpp  Logger.h  Message.cpp  Message.h
src-ble/linux/simpledbus/common/: ObjectManager.cpp  ObjectManager.h  Properties.cpp  Properties.h
src-ble/macos/: NativeBleInternal.h  NativeBleInternal.mm
src-ble/macos/macable/: macable.h  macable.mm
src-ble/windows/: NativeBleInternal.cpp  NativeBleInternal.h
toolchains/linux/: linux_compile.sh  linux_install.sh
toolchains/macos/: macos_compile.sh
